blacklisted/templates/php-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    php: php
  name: php
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
  selector:
    php: php
status:
  loadBalancer: {}
